# Openvr_toolkit

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  CMakePresets.json  CONTINUITY.md  README.md  REFACTORING_PLAN.md  vcpkg.json
.tmp_msbuild/: _CL_36e24522418bfe144d2f7a810fdaba31db  _CL_36e24522418bfe144d2f7a810fdaba31ex  _CL_36e24522418bfe144d2f7a810fdaba31gl  _CL_36e24522418bfe144d2f7a810fdaba31in  _CL_36e24522418bfe144d2f7a810fdaba31sy  _CL_4f8289ad83216830f9cfc720543ca7dedb  _CL_4f8289ad83216830f9cfc720543ca7deex  _CL_4f8289ad83216830f9cfc720543ca7degl  _CL_4f8289ad83216830f9cfc720543ca7dein  _CL_4f8289ad83216830f9cfc720543ca7desy  _CL_635c8078d202c348aaffee905ebb86c1db  _CL_635c8078d202c348aaffee905ebb86c1ex  _CL_635c8078d202c348aaffee905ebb86c1gl  _CL_635c8078d202c348aaffee905ebb86c1in  _CL_635c8078d202c348aaffee905ebb86c1sy  _CL_7feb584bdfd0a1cf935e00222747c795db  _CL_7feb584bdfd0a1cf935e00222747c795ex  _CL_7feb584bdfd0a1cf935e00222747c795gl  _CL_7feb584bdfd0a1cf935e00222747c795in  _CL_7feb584bdfd0a1cf935e00222747c795sy  _CL_9aa86a3aacb94cbd6750c16b9661b266db  _CL_9aa86a3aacb94cbd6750c16b9661b266ex  _CL_9aa86a3aacb94cbd6750c16b9661b266gl  _CL_9aa86a3aacb94cbd6750c16b9661b266in  _CL_9aa86a3aacb94cbd6750c16b9661b266sy  _CL_a59e2ad6cd1834665e8a06ecf5f9c677db  _CL_a59e2ad6cd1834665e8a06ecf5f9c677ex  _CL_a59e2ad6cd1834665e8a06ecf5f9c677gl  _CL_a59e2ad6cd1834665e8a06ecf5f9c677in  _CL_a59e2ad6cd1834665e8a06ecf5f9c677sy  _CL_aa6350b3fa6ada0fa679498d817e0895db  _CL_aa6350b3fa6ada0fa679498d817e0895ex  _CL_aa6350b3fa6ada0fa679498d817e0895gl  _CL_aa6350b3fa6ada0fa679498d817e0895in  _CL_aa6350b3fa6ada0fa679498d817e0895sy  _CL_b39f7cbc8b5c4e52c9e02d987fb47240db  _CL_b39f7cbc8b5c4e52c9e02d987fb47240ex  _CL_b39f7cbc8b5c4e52c9e02d987fb47240gl  _CL_b39f7cbc8b5c4e52c9e02d987fb47240in  _CL_b39f7cbc8b5c4e52c9e02d987fb47240sy  (+7 more)
.tmp_ovtr_loaded_export/: manifest.json
.tmp_ovtr_loaded_mapping/: manifest.json
assets/: app_icon.rc  openvr_actions.json  openvr_bindings_generic.json  openvr_bindings_knuckles.json  openvr_bindings_oculus_touch.json  openvr_bindings_vive_controller.json
docs/: openvr_tracker_recorder_implementation_plan_v2.md
src/: main.cpp
src/app/: Application.cpp  Application.h
src/data/: SessionTypes.cpp  SessionTypes.h  SkeletalSyntheticPose.cpp  SkeletalSyntheticPose.h  VmcSyntheticPose.cpp  VmcSyntheticPose.h
src/export/: ExportPoseTrack.cpp  ExportPoseTrack.h  ExportTypes.h  FbxAsciiAnimationWriter.cpp  FbxAsciiConnectionsWriter.cpp  FbxAsciiExporter.cpp  FbxAsciiExporter.h  FbxAsciiFormatting.cpp  FbxAsciiFormatting.h  FbxAsciiGeometryWriter.cpp  FbxAsciiMath.cpp  FbxAsciiMath.h  FbxAsciiWriter.cpp  FbxAsciiWriter.h  FbxCoordinateConversion.cpp  FbxCoordinateConversion.h  FbxEulerMath.cpp  FbxExportFileWriter.cpp  FbxExportFileWriter.h  FbxExportModel.h  FbxExportPoseKeys.cpp  FbxExportPoseKeys.h  FbxExportSceneBuilder.cpp  FbxExportSceneBuilder.h  FbxExportTimelineRanges.cpp  FbxExportTimelineRanges.h  FbxTimeline.cpp  FbxTimeline.h  GltfExportAnimationData.cpp  GltfExportBuffers.cpp  GltfExportBuffers.h  GltfExportKeyResampler.cpp  GltfExportMeshData.cpp  GltfExportModel.h  GltfExportSceneBuilder.cpp  GltfExportSceneBuilder.h  GltfExportSceneParts.h  GltfExporter.cpp  GltfExporter.h  GltfFileWriter.cpp  (+13 more)
src/import/: GltfAccessor.cpp  GltfAccessor.h  GltfAccessorIndexReader.cpp  GltfAccessorLayout.cpp  GltfAccessorLayout.h  GltfAccessorReadLayout.cpp  GltfAccessorReadLayout.h  GltfAccessorReader.cpp  GltfGlbReader.cpp  GltfGlbReader.h  GltfImportedAnimationBuilders.h  GltfImportedAnimationChannels.cpp  GltfImportedAnimationKeys.cpp  GltfImportedAnimations.cpp  GltfImportedMeshes.cpp  GltfImportedNodes.cpp  GltfImportedSceneBuilder.cpp  GltfImportedSceneBuilder.h  GltfImportedSceneParts.h  GltfImporter.cpp  GltfImporter.h  GltfJson.cpp  GltfJson.h  GltfJsonNumberParser.cpp  GltfJsonParser.cpp  GltfJsonParserState.cpp  GltfJsonParserState.h  GltfJsonStringParser.cpp  GltfJsonStructureParser.cpp  GltfJsonUnicode.cpp  GltfJsonUnicode.h  GltfJsonUtils.cpp  GltfJsonUtils.h  GltfJsonValueParser.cpp
src/math/: PoseInterpolation.cpp  PoseInterpolation.h  PoseOriginTransform.cpp  PoseTransform.cpp  PoseTransform.h  QuaternionUtils.cpp  QuaternionUtils.h  Transform.h
src/recording/: BinaryIO.h  BinarySessionFormat.h  BinarySessionFrameReader.cpp  BinarySessionFrameWriter.cpp  BinarySessionReader.cpp  BinarySessionReader.h  BinarySessionReaderIndex.cpp  BinarySessionWriter.cpp  BinarySessionWriter.h  BinarySessionWriterHeaders.cpp  RecordingController.cpp  RecordingController.h  RecordingControllerManifest.cpp  RecordingControllerState.cpp  RecordingState.h  SamplingScheduler.cpp  SamplingScheduler.h  SessionManifest.cpp  SessionManifest.h  SessionManifestReader.cpp
src/util/: BinaryBuffer.cpp  BinaryBuffer.h  Identifier.cpp  Identifier.h  JsonWriter.cpp  JsonWriter.h  SteamVRRuntime.cpp  SteamVRRuntime.h  SteamVRRuntimeProbe.h  SteamVRRuntimeProbeWin32.cpp  SteamVRRuntimeProbeWin32Internal.h  SteamVRRuntimeProbeWin32Paths.cpp
src/vr/: IVRProvider.h  (+14 more)
tests/: FbxTestSupport.cpp  FbxTestSupport.h  GltfImportTestSupport.cpp  GltfImportTestSupport.h  TestCases.h  TestFileSupport.cpp  TestFrameSupport.cpp  TestGeometrySupport.cpp  TestSupport.cpp  TestSupport.h  Win32ConfigTestSupport.h  Win32LayoutTestSupport.h  core_tests.cpp  test_binary_session.cpp  test_binary_session_guards.cpp  test_export_paths.cpp  test_fbx_animation_exporter.cpp  test_fbx_euler_exporter.cpp  test_fbx_exporter.cpp  test_fbx_geometry_exporter.cpp  test_fbx_math.cpp  test_glb_exporter.cpp  test_glb_import_accessors.cpp  test_gltf_exporter.cpp  test_identifier.cpp  test_importer.cpp  test_math.cpp  test_provider.cpp  test_recording.cpp  test_sampling_scheduler.cpp  test_session_manifest.cpp  test_skeletal_synthetic_pose.cpp  test_win32_config_store.cpp  test_win32_config_store_basics.cpp  test_win32_debug_layout.cpp  test_win32_debug_panel.cpp  test_win32_device_list.cpp  test_win32_device_list_layout.cpp  test_win32_export_noise_filter.cpp  test_win32_imported_scene_lifecycle.cpp  (+39 more)
(+630 files in other folders)
